# noxres

./: .gitignore  Cargo.toml  Trunk.toml  index.html  styles.css
src/: main.rs  scroller.rs
src/components/: Page.rs  PortfolioItem.rs  SectionAbout.rs  SectionPortfolio.rs  SectionProfiles.rs  SectionTop.rs  mod.rs  section_top.rs
