[package]
name = "noxres"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sycamore = { git = "https://github.com/sycamore-rs/sycamore", rev = "05433da18365ee3198788035cd2c228168d7995b" }
log = "0.4"
console_log = {version = "*"}

[dependencies.web-sys]
features = ["DomRect", "Element"]